# PLRE

./: .gitignore  LICENSE  README.md  demo_formulae.txt  demo_plre.py  demo_plre_core.py  plre.py  plre_core.py  pyproject.toml
demo/: demo1.ipynb  demo1_cnf_expressions.txt  demo_formulae.txt  demo_plre.py  demo_plre_core.py
plre/: CNF.g4  CNFLexer.py  CNFParser.py  CNFVisitor.py  CNFVisitorA.py  plre.py  plre_core.py  plre_utils.py
test/: test_formulae_multipleClauses_multipleLiterals.py  test_formulae_multipleClauses_singleLiterals.py  test_formulae_singleClause.py
