[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "plre"
version = "1.0.0"
description = """PLRE is a propositional logic reasoning engine."""
authors = [{name = "David Herron", email = "david.herron@citystgeorges.ac.uk"}]
maintainers = [{name = "David Herron", email = "david.herron@citystgeorges.ac.uk"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["propositional logic", "CNF", "model checking"]

[project.urls]
repository = "https://github.com/djherron/PLRE"

[tool.setuptools]
packages = ["plre"]

